--- a/com.abhi.toyswap/src/main/res/menu/menu_home.xml
+++ b/com.abhi.toyswap/src/main/res/menu/menu_home.xml
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_dashboard"
         android:enabled="true"
         android:icon="@drawable/ic_home_white_48px"
-        android:title=""
-        app:showAsAction="always|withText" />
+        tools:ignore="MenuTitle"
+         />
     <item
         android:id="@+id/action_favourite"
         android:enabled="true"
         android:icon="@drawable/favourite_icon"
-        android:title=""
-        app:showAsAction="always|withText" />
+        tools:ignore="MenuTitle"
+       />
     <item
         android:id="@+id/action_post_new_add"
         android:enabled="true"
         android:icon="@drawable/camera_icon"
-        android:title=""
-        app:showAsAction="always|withText" />
+        tools:ignore="MenuTitle"
+        />
 
     <item
         android:id="@+id/action_messages"
         android:enabled="true"
         android:icon="@drawable/icon_messages"
-        android:title=""
-        app:showAsAction="always|withText" />
+        tools:ignore="MenuTitle"
+         />
 
     <item
         android:id="@+id/action_profile"
         android:enabled="true"
         android:icon="@drawable/icon_profile"
-        android:title=""
-        app:showAsAction="always|withText" />
+        tools:ignore="MenuTitle"
+        />
 </menu>
